fixed Nav and white space below card list removed

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,5 +3,6 @@
 }
 
 .App {
-  display: flex;
+  // display: flex;
+
 }
