--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,6 +1,10 @@
 .nav {
+  position: fixed;
   height: 100vh;
-  width: 18vw;
+  width: 20%;
   border-right: 1px solid black;
   background-color: rgb(0, 247, 255);
+  &__form {
+    margin-top: 120px;
+  }
 }
